Fix for excess spacing between section and footer when it proceeds a widget

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -13,11 +13,17 @@
   // Template wrapper (replace with corresponding template classes)
   .main {
       border-bottom: 0;
+      padding-bottom: 0;
   }
+
   .main.wrapper {
     width: 100%;
     max-width: 100%;
     margin: 0;
+  }
+
+  .bk-header {
+    margin-bottom: 0;
   }
   
   .bk-footer {
